--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@mui/material": "^5.15.1",
     "@mui/x-date-pickers": "^6.19.2",
     "@reduxjs/toolkit": "^2.0.1",
-    "alertifyjs": "^1.13.1",
+    "alertify": "^0.3.0",
+    "alertifyjs": "^1.14.0",
     "antd": "^5.13.3",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
